<resources>
    <string name="app_name">SkiComp</string>

    <string name="onboarding_login_button">Login</string>
    <string name="onboarding_forgot_password"><u>Passwort vergessen</u></string>
    <string name="onboarding_register_button">Noch nicht angemeldet?</string>

    <string name="hint_login_username">USERNAME</string>
    <string name="hint_login_password">PASSWORT</string>

    <string name="registration_title">Registrierung</string>
    <string name="hint_username">USERNAME *</string>
    <string name="hint_email">E-MAIL *</string>
    <string name="hint_password">PASSWORT *</string>
    <string name="hint_confirm_password">PASSWORT WIEDERHOLEN *</string>
    <string name="hint_firstname">VORNAME *</string>
    <string name="hint_lastname">NACHNAME *</string>
    <string name="hint_city">STADT</string>
    <string name="hint_country">LAND</string>

    <string name="error_username">Username enthält ungültige Zeichen</string>
    <string name="error_email_not_valid">E-Mail fehlerhaft</string>
    <string name="error_passwords_not_matching">Passwörter stimmen nicht überein</string>
    <string name="error_password_not_valid">Passwort muss aus mindestens einem Klein-, einem Großbuchstaben und einem Zeichen bestehen</string>
    <string name="error_firstname_not_valid">Vorname enthält ungültige Zeichen</string>
    <string name="error_lastname_not_valid">Nachname enthält ungültige Zeichen</string>
    <string name="error_address_not_valid">Ungültige Adresse</string>

    <string name="onboarding_register_button_forward">WEITER</string>
    <string name="onboarding_register_button_complete">JETZT REGISTRIEREN</string>

    <string name="forgot_password_dialog_text">Du hast dein Passwort vergessen?\nKein Problem!\nGib deinen Nutzername ein und wir senden dir eine E-Mail mit deinem neuen Passwort zu.</string>
    <string name="forgot_password_dialog_button">PASSWORT ZUSCHICKEN</string>

    <string name="toolbar_account_title">MEIN ACCOUNT</string>
    <string name="account_edit"><u>aktualisieren</u></string>
    <string name="logout"><u>Logout</u></string>

    <string name="heroku_profile_picture_url">https://skiservicetest.herokuapp.com/images/%s.png</string>

    <string name="toolbar_friends_title">MEINE FREUNDE</string>
    <string name="friends_search_button">FREUNDE SUCHEN</string>
    <string name="friends_title_requesting">Anfragen</string>
    <string name="friends_title">Freunde</string>
    <string name="friends_title_requested">Anfrage gesendet</string>

    <string name="friends_title_search_friends">Freunde suchen</string>
    <string name="friends_search_title_result">Suchergebnisse</string>
    <string name="friends_search_no_input">Kein Eingabe</string>
    <string name="friends_search_no_results">Zu deiner Eingabe konnten keine User gefunden werden.</string>

    <string name="friends_title_user_details">User-Details</string>

    <string name="toolbar_skiarea_title">SKIGEBIETE</string>
    <string name="skiarea_favorites_title">Favoriten</string>
    <string name="skiarea_favorites_button">FAVORITEN (%d)</string>
    <string name="skiarea_favorites_added">Zu Favoriten hinzugefügt</string>
    <string name="skiarea_favorites_removed">Von Favoriten entfernt</string>
    <string name="skiarea_title_height">Höhe</string>
    <string name="skiarea_title_slopes">Pisten</string>
    <string name="skiarea_title_lifts">Lifte</string>
    <string name="skiarea_title_more_info">Weitere Informationen</string>

    <string name="toolbar_statistis_title">MEINE STATISTIKEN</string>

</resources>
