<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/onboarding_margin">

        <EditText
            style="@style/DefaultEditText"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusForward="@+id/et_email"
            android:hint="@string/hint_username" />

        <EditText
            style="@style/DefaultEditText"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:layout_marginTop="@dimen/default_padding"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />

        <EditText
            style="@style/DefaultEditText"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:layout_marginTop="@dimen/default_padding"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />

        <EditText
            style="@style/DefaultEditText"
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginBottom="@dimen/default_padding"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password" />

    </LinearLayout>

</layout>