<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="handler" type="de.skicomp.dialogs.ForgotPasswordDialog" />
    </data>

    <RelativeLayout
        android:id="@+id/rl_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:clickable="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <!--android:background="@drawable/layer_shadow">-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@android:color/white">

                <ImageView
                    android:id="@+id/ib_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_close"
                    android:onClick="@{handler::onClickClose}"/>

                <TextView
                    style="@style/DefaultText.DarkGray"
                    android:id="@+id/tv_forgot_password_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ib_close"
                    android:text="@string/forgot_password_dialog_text"/>

                <EditText
                    style="@style/DefaultEditText"
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding"
                    android:layout_marginBottom="@dimen/default_padding"
                    android:hint="@string/hint_username" />

                <Button
                    style="@style/DefaultButton"
                    android:id="@+id/bt_request_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding"
                    android:text="@string/forgot_password_dialog_button"
                    android:onClick="@{handler::onClickRequestNewPassword}"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</layout>